[INST] Add VMAC2H

--- a/tests/tcg/arc/Makefile
+++ b/tests/tcg/arc/Makefile
@@ -82,6 +82,7 @@ TESTCASES += check_enter_leave.tst
 TESTCASES += check_bta.tst
 TESTCASES += check_vadd.tst
 TESTCASES += check_vsub.tst
+TESTCASES += check_vmac2h.tst
 TESTCASES += check_mpyd.tst
 TESTCASES += check_bi.tst
 TESTCASES += check_bih.tst
