Fixed mpy.f instruction for arc64.

--- a/tests/tcg/arc/Makefile
+++ b/tests/tcg/arc/Makefile
@@ -66,6 +66,7 @@ TESTCASES += check_swirq.tst
 TESTCASES += check_swirq1.tst
 TESTCASES += check_swirq3.tst
 TESTCASES += check_mpyw.tst
+TESTCASES += check_mpyf.tst
 TESTCASES += check_subf.tst
 TESTCASES += check_prefetch.tst
 TESTCASES += check_mac.tst
