--- a/tests/tcg/Makefile.target
+++ b/tests/tcg/Makefile.target
@@ -97,7 +97,7 @@ ifdef CONFIG_USER_ONLY
 # sub-targets (e.g. ARM & AArch64) then it is up to
 # $(TARGET_NAME)/Makefile.target to include the common parent
 # architecture in its VPATH.
--include $(SRC_PATH)/tests/tcg/multiarch/Makefile.target
+#-include $(SRC_PATH)/tests/tcg/multiarch/Makefile.target
 -include $(SRC_PATH)/tests/tcg/$(TARGET_NAME)/Makefile.target
 
 # Add the common build options
